--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: Jay Meil - IBM Certified Data Science Professional
 
 # Short description of your site
-description: Data Science Alchemy: An almagamation of information on Applied Maths, Data Science, and Machine Learning. 
+description: Data Science Alchemy An almagamation of information on Applied Maths, Data Science, and Machine Learning. 
 
 # --- Navigation bar options --- #
 
