--- a/_config.yml
+++ b/_config.yml
@@ -74,8 +74,8 @@ social-network-links:
   #rss: True
   email: "randomwalkjm@gmail.com"
   #facebook: daattali
-  github: https://github.com/RecursiveOuroboros
-  twitter: https://twitter.com/RecursiveOurob1
+  github: RecursiveOuroboros
+  twitter: RecursiveOurob1
 #  reddit: yourname
 #  google-plus: +DeanAttali
    linkedin: https://www.linkedin.com/in/jay-meil-b4731139/
