--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
 # --- Web Statistics Section --- #
 
 # Fill in your Google Analytics gtag.js ID to track your website using gtag
-#gtag: "<!-- Global site tag (gtag.js) - Google Analytics -->
+#gtag: <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137785502-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -112,7 +112,7 @@ url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
   gtag('js', new Date());
 
   gtag('config', 'UA-137785502-1');
-</script>"
+</script>
 
 # Fill in your Google Analytics ID to track your website using GA
 #google_analytics: "UA-1377855024"
