--- a/_config.yml
+++ b/_config.yml
@@ -105,14 +105,14 @@ url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
 
 # Fill in your Google Analytics gtag.js ID to track your website using gtag
 #gtag: <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137785502-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+#<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137785502-1"></script>
+#<script>
+ ## window.dataLayer = window.dataLayer || [];
+ # function gtag(){dataLayer.push(arguments);}
+ ### gtag('js', new Date());
 
-  gtag('config', 'UA-137785502-1');
-</script>
+ # gtag('config', 'UA-137785502-1');
+#</script>
 
 # Fill in your Google Analytics ID to track your website using GA
 #google_analytics: "UA-1377855024"
