--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   #rss: True
-  email: "randomwalkjm@gmail.com"
+  email: randomwalkjm@gmail.com
   #facebook: daattali
   github: RecursiveOuroboros
   twitter: RecursiveOurob1
