--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ description: Data Science Alchemy- An Almagamation of Information on Applied Mat
 navbar-links:
   About Me: "aboutme"
   Resources:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
-    - GitHub Pages: "https://pages.github.com/"
-  Author's home: "http://deanattali.com"
+ #   - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
+ ##   - Learn markdown: "http://www.markdowntutorial.com/"
+ #   - GitHub Pages: "https://pages.github.com/"
+  # Author's home: "http://deanattali.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -45,8 +45,8 @@ avatar: "/img/avatar-icon.png"
 navbar-col: "#F5F5F5"
 navbar-text-col: "#404040"
 navbar-children-col: "#F5F5F5"
-page-col: "#0000FF"
-link-col: "#FFFFFF"
+page-col: "FFFFFF"
+link-col: "0000FF"
 hover-col: "#0085A1"
 footer-col: "#F5F5F5"
 footer-text-col: "#777777"
@@ -78,7 +78,7 @@ social-network-links:
   twitter: RecursiveOurob1
 #  reddit: yourname
 #  google-plus: +DeanAttali
-  linkedin: https://www.linkedin.com/in/jay-meil-b4731139/
+  linkedin: jay-meil-b4731139/
 #  xing: yourname
   stackoverflow: "11326292/recursiveouroboros"
 #  snapchat: deanat78
