--- a/_config.yml
+++ b/_config.yml
@@ -42,8 +42,8 @@ avatar: "/img/avatar-icon.png"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#F5F5F5"
-navbar-text-col: "#404040"
+navbar-col: "#8FBC8F"
+navbar-text-col: "#2F4F4F"
 navbar-children-col: "#F5F5F5"
 page-col: "E6E6E6"
 link-col: "0000FF"
