--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ avatar: "/img/avatar-icon.png"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#8FBC8F"
+navbar-col: "#006600"
 navbar-text-col: "#2F4F4F"
 navbar-children-col: "#F5F5F5"
 page-col: "E6E6E6"
