--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ avatar: "/img/avatar-icon.png"
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
 navbar-col: "#339933"
-navbar-text-col: "#2F4F4F"
+navbar-text-col: "#DCDCDC"
 navbar-children-col: "#339933"
 page-col: "E6E6E6"
 link-col: "0000FF"
