--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ avatar: "/img/avatar-icon.png"
 navbar-col: "#006600"
 navbar-text-col: "#D0F0C0"
 navbar-children-col: "#006600"
-page-col: "E6E6E6"
+page-col: "FAF0E6"
 link-col: "0000FF"
 hover-col: "#0085A1"
 footer-col: "#F5F5F5"
