--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Jay Meil - IBM Certified Data Science Professional
+title: Data Science Alchemy- An Almagamation of Information on Applied Maths, Data Science, and Machine Learning. 
 
 # Short description of your site
-description: Data Science Alchemy- An Almagamation of Information on Applied Maths, Data Science, and Machine Learning. 
+description: Jay Meil - IBM Certified Data Science Professional  
 
 # --- Navigation bar options --- #
 
