--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
+# My focus: Growth, Individualtiy, Vision Coherence and Unification, Automaticity, Results, 
+# My focus: Growth with a focused and individualized Position, Vision Coherence, Gatghering Information from multi arenas to use
+### for integration, Team Building with a dedicated focus on the visioned result and evolution to obtain the interest of growth.
+
+
 # --- General options --- #
 # --- General options --- #
 
