--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ description: An Amalgamation of Information on Applied Maths, Data Science, and 
 
 # List of links in the navigation bar
 navbar-links:
-  About Me: "aboutme"
+  My History: "A little more about me"
   Resources:
 #    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     - Learn markdown: "http://www.markdowntutorial.com/"
@@ -38,7 +38,7 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar-icon.png"
+#avatar: "/img/avatar-icon.png"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
