--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,10 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Data Science Alchemy
+title: Jason T. Meil, IBM Certified Data Science Professional
 
 # Short description of your site
-description: An Amalgamation of Information on Applied Maths, Data Science, and Machine Learning
+description: 
 
 # --- Navigation bar options --- #
 
