--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "https://i1.wp.com/www.breakthroughmarketingsecrets.com/wp-content/uploads/2017/07/alchemist.jpg?ssl=1"
+avatar: "https://github.com/RecursiveOuroboros/RecursiveOuroboros.github.io/blob/master/img/alchemist.jpg"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
