--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ avatar: "/img/alchemist.jpg"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
-title-img: "/img/Cosimic.jpg"
+# title-img: 
 
 # --- Background colour/image options --- #
 
@@ -58,7 +58,7 @@ footer-link-col: "#404040"
 
 # navbar-img: "/img/bgimage.png"
 # footer-img: "/img/bgimage.png"
-# page-img: "/img/bgimage.png"
+page-img: "/img/Cosimic.jpg"
 
 # --- Footer options --- #
 
