--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description:
 
 # List of links in the navigation bar
 navbar-links:
-  About Me:<a href=https://github.com/RecursiveOuroboros/RecursiveOuroboros.github.io/blob/master/aboutme.md>About Me </a>
+  About Me:https://github.com/RecursiveOuroboros/RecursiveOuroboros.github.io/blob/master/aboutme.md
   Resources:
 #    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     - Learn markdown: "http://www.markdowntutorial.com/"
